--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!doctype html><html lang="en-US"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/> 
   <meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/>
-  <meta name="description" content="Learn With Basics"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><
- 
-  style>.goog-te-gadget .goog-te-combo{margin:0;border:none;border-radius:50px;padding:5px 0 5px 35px;background:#fff url(images/google-logo.gif) no-repeat 10px center;-moz-appearance:none;appearance:none;-webkit-appearance:none}</style><title>Learn With Basics</title><link href="/static/css/main.b651142b.chunk.css" rel="stylesheet"></head><body>
+  <meta name="description" content="Learn With Basics"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><style>.goog-te-gadget .goog-te-combo{margin:0;border:none;border-radius:50px;padding:5px 0 5px 35px;background:#fff url(images/google-logo.gif) no-repeat 10px center;-moz-appearance:none;appearance:none;-webkit-appearance:none}</style><title>Learn With Basics</title><link href="/static/css/main.b651142b.chunk.css" rel="stylesheet"></head><body>
   
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <script type="text/javascript">
